Bug Fix: article page overflow in mobile view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,6 @@ body::-webkit-scrollbar-thumb {
   background-color: rgb(47, 47, 47);
   border-radius: 10px;
 }
+code {
+  white-space: pre-wrap !important;
+}
